--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Aus-meinem-Leben_75055
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75055-h/images/cover.jpg
 creator:
   author:
     agent_name: Vischer, Melchior
@@ -14,6 +17,8 @@ creator:
     gutenberg_agent_id: '57802'
     url: http://www.gutenberg.org/2009/agents/57802
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75055#Aus-meinem-Leben
 gutenberg_issued: '2025-01-07'
 gutenberg_type: Text
 identifiers:
